# s3_file_sync

./: .gitignore  Cargo.toml  README.md
proptest-regressions/config/: mod.txt
src/: database.rs  error.rs  file.rs  main.rs  uploader.rs  watcher.rs
src/config/: mod.rs
src/controller/: database.rs  error.rs  file.rs  mod.rs
src/controller/database/: error.rs  mod.rs
src/uploader/: error.rs  mod.rs
src/watcher/: error.rs  mod.rs
